syntax = "proto3";

option csharp_namespace = "OwnerService";

service Owner {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc RegisterPet(RegisterPetRequest) returns (RegisterPetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc GetPets(GetPetsRequest) returns (GetPetsResponse);
}

message RegisterRequest {
    string email = 1;
}

message RegisterResponse {
    string message = 1;
    string ownerId = 2;
}

message RegisterPetRequest {
    string ownerId = 1;
    string email = 2;
    string type = 3;
    string race = 4;
    string name = 5;
}

message RegisterPetResponse {
    string message = 1;
}

message DeleteRequest {
    string ownerId = 1;
    string email = 2;
}

message DeleteResponse {
    string message = 1;
}

message GetPetsRequest {
    string ownerId = 1;
    string email = 2;
}

message PetResponse {
    string Type = 1;
    string Race = 2;
    string Name = 3;
}

message GetPetsResponse {
    string message = 1;
    repeated PetResponse pets = 2;
}